[perf] Fix the spinner which was shifting the layout down
Bug: b/371228785
Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/906266
Commit-Queue: Vidit Chitkara <viditchitkara@google.com>

--- a/perf/modules/test-picker-sk/test-picker-sk.scss
+++ b/perf/modules/test-picker-sk/test-picker-sk.scss
@@ -18,8 +18,21 @@
   }
 
   #queryCount {
+    .test-picker-sk-matches-container {
+      height: 30px;
+      display: flex;
+      align-items: flex-end;
+
+      spinner-sk {
+        margin: 0;
+        margin-left: 8px;
+        margin-top: 7px;
+      }
+    }
+
     button {
       z-index: 1;
+      margin-bottom: 0;
     }
     display: grid;
     place-items: center;
